fix: fix the scrollbar problem

--- a/src/assets/scss/components/scrollbar.scss
+++ b/src/assets/scss/components/scrollbar.scss
@@ -4,11 +4,13 @@
 .scrollbar-white {
 	scrollbar-width: thin;
 	overscroll-behavior: contain;
+
 	&::-webkit-scrollbar {
 		width: 15px;
 		height: 15px;
 		background-color: unset;
 	}
+
 	&::-webkit-scrollbar-thumb {
 		border-radius: 10px;
 		background-color: white;
@@ -18,11 +20,46 @@
 .scrollbar-gray {
 	scrollbar-width: thin;
 	overscroll-behavior: contain;
+
 	&::-webkit-scrollbar {
 		width: 15px;
 		height: 15px;
 		background-color: unset;
 	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		background-color: setColor(gray-3);
+	}
+}
+
+
+.scrollbar-white--thin {
+	scrollbar-width: thin;
+	overscroll-behavior: contain;
+
+	&::-webkit-scrollbar {
+		width: 8px;
+		height: 8px;
+		background-color: unset;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 10px;
+		background-color: white;
+	}
+}
+
+.scrollbar-gray--thin {
+	scrollbar-width: thin;
+	overscroll-behavior: contain;
+
+	&::-webkit-scrollbar {
+		width: 8px;
+		height: 8px;
+		background-color: unset;
+	}
+
 	&::-webkit-scrollbar-thumb {
 		border-radius: 10px;
 		background-color: setColor(gray-3);
